add small function

--- a/NaiveBayesModelDrill.ipynb
+++ b/NaiveBayesModelDrill.ipynb
@@ -678,6 +678,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def getWords(text):\n",
+    "    word_list = ''.join((c if c.isalpha() else ' ') for c in text).split()\n",
+    "    return word_list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
